# gridscore-energy-financing

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  errors.py  health.py
backend/app/api/v1/: __init__.py  admin.py  analytics.py  auth.py  customers.py  deps.py  ingestion.py  operators.py  portfolio.py  router.py  schemas.py  scoring.py
backend/app/cli/: seed.py
backend/app/core/: __init__.py  config.py  logging.py  observability.py  ratelimit.py  security.py
backend/app/db/: __init__.py  base.py  redis.py  session.py  types.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_synthetic_profile.py
backend/app/db/models/: __init__.py  customer.py  events.py  platform.py  scoring.py  synthetic.py  tenancy.py
backend/app/db/repositories/: __init__.py  base.py  repositories.py
backend/app/domain/: __init__.py  enums.py
backend/app/ml/: __init__.py  dataset.py  drift.py  explain.py  feature_schema.py  features.py  model.py  model_card.py  training.py
backend/app/ml/data_gen/: __init__.py  config.py  generator.py  persistence.py  seed.py
backend/app/providers/: __init__.py  base.py  mock.py  registry.py
backend/app/services/: __init__.py  feature_io.py  retention.py
backend/app/services/analytics/: __init__.py  cooperative.py  network_effect.py
backend/app/services/ingestion/: __init__.py  anonymise.py  enrichment.py  parsing.py  pipeline.py  schemas.py  service.py
backend/app/services/scoring/: __init__.py  model_loader.py  service.py  transform.py
backend/app/workers/: __init__.py  ingest.py  main.py  queue.py  retention.py
backend/artifacts/: scoring_model.joblib
backend/scripts/: bench_scoring.py  locustfile.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api.py  test_constraints.py  test_ingestion.py  test_migrations.py  test_partitioning.py  test_repositories.py  test_retention.py  test_scoring_service.py  test_seed_demo.py
backend/tests/unit/: test_anonymise.py  test_features.py  test_health.py  test_ingestion_parsing.py  test_ml.py  test_network_effect.py  test_providers.py  test_ratelimit.py  test_score_transform.py  test_synthetic_generator.py  test_transform_properties.py
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  DEMO_SCRIPT.md  ROADMAP.md  RUNBOOK.md  SECURITY.md
docs/model_cards/: energy-credit-score.md
docs/stages/: STAGE_0_REPORT.md  STAGE_10_REPORT.md  STAGE_1_REPORT.md  STAGE_2_REPORT.md  STAGE_3_REPORT.md  STAGE_4_REPORT.md  STAGE_5_REPORT.md  STAGE_6_REPORT.md  STAGE_7_REPORT.md  STAGE_8_REPORT.md  STAGE_9_REPORT.md
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: console.spec.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.test.tsx  App.tsx  AppShell.tsx  RequireAuth.tsx  Routes.tsx  providers.tsx
frontend/src/components/: ScoreGauge.tsx
frontend/src/components/tour/: GuidedTour.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/features/admin/: AdminPage.tsx
frontend/src/features/auth/: LoginPage.test.tsx  LoginPage.tsx
frontend/src/features/console/: OperatorConsolePage.tsx
frontend/src/features/ingest/: UploadPage.tsx
frontend/src/features/lender/: LenderPage.test.tsx  LenderPage.tsx
frontend/src/features/portfolio/: PortfolioPage.tsx
frontend/src/features/scoring/: ScoreCard.tsx  (+4 more)
frontend/src/lib/: auth.tsx  demo.ts  demoAccounts.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
infra/: docker-compose.prod.yml  docker-compose.yml  render.yaml
infra/github-actions/: README.md
scripts/: README.md  export_openapi.py  seed_demo.py  train_model.py
(+3 files in other folders)
