[project]
name = "gridscore-backend"
version = "0.1.0"
description = "GridScore AI — credit infrastructure for Africa's energy lenders (backend)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Stage 0 keeps the runtime surface deliberately small: an async FastAPI app
# with config, structured logging, and health probes. ML / DB / auth deps are
# introduced in the stages that actually use them.
dependencies = [
    "fastapi>=0.118,<0.121",
    "starlette>=0.47.2",
    "uvicorn[standard]>=0.34,<0.35",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<25",
    # ---- Stage 1: persistence ----
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2",
    "greenlet>=3.1,<4",
    "redis>=5.2,<6",
    # ---- Stage 2: synthetic data engine ----
    # Pinned to the 1.26 line: xgboost 2.0.x and shap 0.46 predate the stricter
    # numpy 2.x dtype rules, so we stay on the last 1.x release for a consistent,
    # CPU-friendly ML stack.
    "numpy>=1.26,<2.0",
    # ---- Stage 3: ML platform ----
    "scikit-learn>=1.5,<2",
    # Pin to the 2.0 line: 2.1+ adds a hard ~600MB nvidia CUDA dependency
    # (nvidia-nccl-cu12) we do not need for CPU inference. 2.0.x is CPU-only.
    "xgboost>=2.0,<2.1",
    "shap>=0.46,<0.47",
    "mlflow>=2.19,<3",
    "pandas>=2.2,<3",
    "joblib>=1.4,<2",
    # ---- Stage 5: multi-tenant API & auth ----
    "pyjwt>=2.10,<3",
    "argon2-cffi>=23.1,<24",
    "python-multipart>=0.0.12,<0.1",
    # ---- Stage 6: ingestion background worker ----
    "arq>=0.26,<0.27",
    # ---- Stage 9: observability ----
    "prometheus-client>=0.21,<0.22",
    "opentelemetry-sdk>=1.29,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<0.10",
    "black>=24.10,<25",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-cov>=6.0,<7",
    "httpx>=0.28,<0.29",
    # ---- Stage 1: integration tests against a real Postgres ----
    "testcontainers[postgres]>=4.9,<5",
    "psycopg2-binary>=2.9,<3",
    # ---- Stage 5: in-memory Redis for API/rate-limit tests ----
    "fakeredis>=2.26,<3",
    # ---- Stage 9: hardening & security ----
    "hypothesis>=6.122,<7",
    "pip-audit>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling configuration (single source of truth for both stacks lives per-repo)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# Reasonable, opinionated default rule set for a production backend.
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in arg defaults.

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
files = ["app", "tests"]

[[tool.mypy.overrides]]
# Third-party libraries without type stubs / py.typed markers.
module = ["testcontainers.*", "shap.*", "sklearn.*", "joblib.*", "xgboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch external resources (db, redis)",
    "e2e: end-to-end tests through the API",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Gate on the domain/services surface (measured 91% at Stage 9); brief target ≥80%.
fail_under = 85
